Fix mobile splash screen overlap

--- a/themes/hugo-theme-codex/assets/scss/pages/about.scss
+++ b/themes/hugo-theme-codex/assets/scss/pages/about.scss
@@ -6,9 +6,11 @@
   justify-content: center;
   align-items: center;
   font-size: 14px;
+  padding-top: 6rem;
 
   @media screen and (min-width: $medium) {
     font-size: 18px;
+    padding-top: 0;
   }
 }
 
